amqp, amqpStatusListener and ES7 modules added.

--- a/settings.gradle
+++ b/settings.gradle
@@ -41,7 +41,8 @@ include 'client-spring'
 include 'cassandra-persistence'
 include 'redis-persistence'
 
-include 'es6-persistence'
+include 'es7-persistence'
+include 'amqp'
 
 include 'redis-lock'
 
