--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -23,7 +23,8 @@ ext {
     revCassandraUnit = '3.11.2.0'
     revCommonsIo = '2.7'
     revDynoQueues = '2.0.20'
-    revElasticSearch6 = '6.8.12'
+    revElasticSearch7 = '7.6.2'
+    revAmqpClient = '5.13.0'
     revEmbeddedRedis = '0.6'
     revEurekaClient = '1.10.10'
     revGroovy = '2.5.13'
