--- a/settings.gradle
+++ b/settings.gradle
@@ -43,6 +43,7 @@ include 'redis-persistence'
 
 include 'es7-persistence'
 include 'amqp'
+include 'workflow-event-listener'
 
 include 'redis-lock'
 
