--- a/server/build.gradle
+++ b/server/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation project(':conductor-amqp')
     implementation project(':conductor-workflow-event-listener')
 
+    implementation "com.lmax:disruptor:${revDisruptor}"
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
